clean out Heron styles, reset to base
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/styleguide/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -4,8 +4,7 @@
 
 		<script src="../../js/jquery-2.0.0b2.js"></script>
 
-		<!-- USES JS FROM THE WORKING HERON DIRECTORY -->
-		<script src="../../../../../../Sites/heron/static/js/heron.combined.min.js"></script>
+		<script src="../js/hickoryvet.min.js"></script>
 
 		<!--
 		<script>
