--- a/styleguide/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/styleguide/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,22 +1,26 @@
 <ul class="sg-colors">
 	<li>
-		<span class="sg-swatch colored-bg purple"></span>
-		<span class="sg-label">$purple<br>rgb(118,126,210);</span>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
 	</li>
 	<li>
-		<span class="sg-swatch colored-bg blue"></span>
-		<span class="sg-label">$orange<br>rgb(255,128,0);</span>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
 	</li>
 	<li>
-		<span class="sg-swatch colored-bg green"></span>
-		<span class="sg-label">$green<br>rgb(127,196,44);</span>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
 	</li>
 	<li>
-		<span class="sg-swatch colored-bg orange"></span>
-		<span class="sg-label">$orange<br>rgb(255,128,0);</span>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
 	</li>
 	<li>
-		<span class="sg-swatch colored-bg gray"></span>
-		<span class="sg-label">$gray<br>rgb(128,133,135);</span>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
+	</li>
+	<li>
+		<span class="sg-swatch"></span>
+		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
 	</li>
 </ul>
