--- a/styleguide/source/css/patterns/_notifications.scss
+++ b/styleguide/source/css/patterns/_notifications.scss
@@ -1,10 +1,9 @@
 /* 
 ////////////////////////////////////////////////////////////////////////////
-Error/Valid Messages
+Error/Valid Messages (defaults are kinda messy...need to tidy up)
 ////////////////////////////////////////////////////////////////////////////
 */
 
-/* Message Lists */
 
 .messages {
   li {
