--- a/styleguide/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/styleguide/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
