--- a/styleguide/source/_patterns/01-molecules/05-navigation/00-main-nav.mustache
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/00-main-nav.mustache
@@ -1,28 +1,14 @@
-<nav class="menu nav-main" role="navigation">
-    <ul class="level-1">
-        <li class="has-subnav"><a href="{{ url }}">The Enterprise</a>
-            <ul class="level-2">
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-            </ul>
-        </li>
-        <li class="has-subnav"><a href="{{ url }}">The Market</a>
-            <ul class="level-2">
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-            </ul>
-        </li>
-        <li class="has-subnav"><a href="{{ url }}">Engage With Us</a>
-            <ul class="level-2">
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-                <li><a href="{{ url }}">Menu Item</a></li>
-            </ul>
-        </li>
+<nav class="nav-main" role="navigation">
+    <ul>
+        <li><a href="{{ url }}">Home</a></li>
+        <li><a href="{{ url }}">About</a></li>
+        <li><a href="{{ url }}">Service</a></li>
+        <li><a href="{{ url }}">Our Doctors</a></li>
+        <li><a href="{{ url }}">Pet Owners</a></li>
+        <li><a href="{{ url }}">Veterinarians</a></li>
+        <li><a href="{{ url }}">News &amp; Events</a></li>
+        <li><a href="{{ url }}">Online Pharmacy</a></li>
+        <li><a href="{{ url }}">Contact Us</a></li>
+        <li><a href="{{ url }}">Search</a></li>
     </ul>
 </nav>
