--- a/styleguide/source/css/patterns/_pagination.scss
+++ b/styleguide/source/css/patterns/_pagination.scss
@@ -7,38 +7,14 @@
     float: left;
     margin: 0 .25em 0 0;
 
-    &:before {
-      content: '' !important;
-    }
-
     a {
       border: none;
-      padding: .5em .65em .5em .75em;   
-  
-      &.next {
-        margin-left: .25em;
-        &:after {
-          font-family: 'FontAwesome';
-          content: "\f054";
-          color: $purple;
-          font-size: .85em;
-        }
-      }
-
-      &.previous {
-        margin-right: .25em;
-        &:before {
-          font-family: 'FontAwesome';
-          content: "\f053";
-          color: $purple;
-          font-size: .85em;
-        }
-      }
+      padding: .5em .65em .5em .75em;
     }
 
     &.current_page {
       a {
-        border: 1px solid;     
+        border-bottom: 1px solid;     
       }
     }
   }
